language En, No partially done.

--- a/locale/no/mod-locales-settings-1.cfg
+++ b/locale/no/mod-locales-settings-1.cfg
@@ -1,5 +1,14 @@
 [mod-setting-name]
 modular-armor-grid-size-h=Modulær Rustning høyde
 modular-armor-grid-size-w=Modulær Rustning bredde
-
+power-armor-grid-size-h=Power Rustning høyde
+power-armor-grid-size-w=Power Rustning bredde
+power-armor-grid-size-mk2-h=Power Armour mk2 høyde
+power-armor-grid-size-mk2-w=Power Armour mk2 bredde
 [mod-setting-description]
+modular-armor-grid-size-h=
+modular-armor-grid-size-h=
+power-armor-grid-size-h=
+power-armor-grid-size-w=
+power-armor-grid-size-mk2-h=
+power-armor-grid-size-mk2-w=
