--- a/locale/no/mod-locales-settings-1.cfg
+++ b/locale/no/mod-locales-settings-1.cfg
@@ -3,8 +3,8 @@ modular-armor-grid-size-h=Modulær Rustning høyde
 modular-armor-grid-size-w=Modulær Rustning bredde
 power-armor-grid-size-h=Strøm Rustning høyde
 power-armor-grid-size-w=Strøm Rustning bredde
-power-armor-grid-size-mk2-h=Strøm Armour mk2 høyde
-power-armor-grid-size-mk2-w=Strøm Armour mk2 bredde
+power-armor-grid-size-mk2-h=Strøm Rustning mk2 høyde
+power-armor-grid-size-mk2-w=Strøm Rustning mk2 bredde
 [mod-setting-description]
 modular-armor-grid-size-h=
 modular-armor-grid-size-w=
