--- a/locale/en/mod-locale-settings-1.cfg
+++ b/locale/en/mod-locale-settings-1.cfg
@@ -6,9 +6,9 @@ power-armor-grid-size-w=Power Armour width
 power-armor-mk2-grid-size-h=Power Armour mk2 hight
 power-armor-mk2-grid-size-w=Power Armour mk2 width
 [mod-setting-description]
-modular-armor-grid-size-h=set hight for modular Armour grid hight from 5-9
-modular-armor-grid-size-w=set width for modular Armour grid width from 5-9
-power-armor-grid-size-h=set hight for Power Armour hight form 5-19
-power-armor-grid-size-w=set width for Power Armour width 5-19
-power-armor-mk2-grid-size-h=set hight for Power Armour mk2 hight 5-29
-power-armor-mk2-grid-size-w=set width for Power Armour mk2 width 5-29
+modular-armor-grid-size-h=Set hight for modular Armour grid from 5-9
+modular-armor-grid-size-w=Set width for modular Armour grid from 5-9
+power-armor-grid-size-h=Set hight for Power Armour from 5-19
+power-armor-grid-size-w=Set width for Power Armour from 5-19
+power-armor-mk2-grid-size-h=Set hight for Power Armour mk2 from 5-40
+power-armor-mk2-grid-size-w=Set width for Power Armour mk2 from 5-40
