--- a/locale/no/mod-locales-settings-1.cfg
+++ b/locale/no/mod-locales-settings-1.cfg
@@ -6,9 +6,9 @@ power-armor-grid-size-w=Strøm Rustning bredde
 power-armor-mk2-grid-size-h=Strøm Rustning mk2 høyde
 power-armor-mk2-grid-size-w=Strøm Rustwning mk2 bredde
 [mod-setting-description]
-modular-armor-grid-size-h=Sett høyde for Modulær Rustnings rute-nett. fra 5-9.
-modular-armor-grid-size-w=Sett bredde for Modulær Rustningens rute-nett. fra 5-9.
-power-armor-grid-size-h=Sett høyde størrelse for Strøm Rustnings rute-nett. fra 5-19.
-power-armor-grid-size-w=Sett bredde for Strøm Rustnings rute-nett. fra 5-19.
-power-armor-mk2-grid-size-h=Sett høyde for Strøm Rustning mk2s rute-nett. fra 5-40.
-power-armor-mk2-grid-size-w=Sett bredde for Strøm Rustning mk2s rute-nett. fra 5-40.
+modular-armor-grid-size-h=Sett høyde for Modulær Rustnings utstyr nett. fra 5-9.
+modular-armor-grid-size-w=Sett bredde for Modulær Rustningens utstyr nett. fra 5-9.
+power-armor-grid-size-h=Sett høyde størrelse for Strøm Rustnings utstyr nett. fra 5-19.
+power-armor-grid-size-w=Sett bredde for Strøm Rustnings utstyr nett. fra 5-19.
+power-armor-mk2-grid-size-h=Sett høyde for Strøm Rustning mk2s utstyr nett. fra 5-40.
+power-armor-mk2-grid-size-w=Sett bredde for Strøm Rustning mk2s utstyr nett. fra 5-40.
