--- a/locale/en/mod-locale-settings-1.cfg
+++ b/locale/en/mod-locale-settings-1.cfg
@@ -1,9 +1,9 @@
 [mod-setting-name]
-modular-armor-grid-size-h=Modular Armour hight
+modular-armor-grid-size-h=Modular Armour height
 modular-armor-grid-size-w=Modular Armour width
-power-armor-grid-size-h=Power Armour hight
+power-armor-grid-size-h=Power Armour height
 power-armor-grid-size-w=Power Armour width
-power-armor-mk2-grid-size-h=Power Armour mk2 hight
+power-armor-mk2-grid-size-h=Power Armour mk2 height
 power-armor-mk2-grid-size-w=Power Armour mk2 width
 [mod-setting-description]
 modular-armor-grid-size-h=Set height for modular Armour grid from 5-9
