--- a/locale/no/mod-locales-settings-1.cfg
+++ b/locale/no/mod-locales-settings-1.cfg
@@ -1,14 +1,13 @@
 [mod-setting-name]
 modular-armor-grid-size-h=Modulær Rustning høyde
 modular-armor-grid-size-w=Modulær Rustning bredde
-power-armor-grid-size-h=Strøm Rustning høyde
-power-armor-grid-size-w=Strøm Rustning bredde
-power-armor-mk2-grid-size-h=Strøm Rustning mk2 høyde
-power-armor-mk2-grid-size-w=Strøm Rustwning mk2 bredde
+power-armor-grid-size-h=Elektrisk Rustning høyde
+power-armor-grid-size-w=Elektrisk Rustning bredde
+power-armor-mk2-grid-size-h=Elektrisk Rustning mk2 høyde
+power-armor-mk2-grid-size-w=Elektrisk Rustwning mk2 bredde
 [mod-setting-description]
-modular-armor-grid-size-h=Sett høyde for Modulær Rustnings utstyr nett. fra 5-9.
-modular-armor-grid-size-w=Sett bredde for Modulær Rustningens utstyr nett. fra 5-9.
-power-armor-grid-size-h=Sett høyde størrelse for Strøm Rustnings utstyr nett. fra 5-19.
-power-armor-grid-size-w=Sett bredde for Strøm Rustnings utstyr nett. fra 5-19.
-power-armor-mk2-grid-size-h=Sett høyde for Strøm Rustning mk2s utstyr nett. fra 5-40.
-power-armor-mk2-grid-size-w=Sett bredde for Strøm Rustning mk2s utstyr nett. fra 5-40.
+modular-armor-grid-size-h=Sett høyde for Modulær Rustnings rutenett. fra 1-9.
+modular-armor-grid-size-w=Sett bredde for Modulær Rustningens rutenett. fra 1-9.
+power-armor-grid-size-h=Sett høyde størrelse for Elektrisk Rustnings utstyrs nett. fra 5-19.
+power-armor-grid-size-w=Sett bredde for Elektrisk Rustnings rutenett. fra 5-19.
+power-armor-mk2-grid-size-w=Sett bredde for Elektrisk Rustning mk2 rutenett. fra 5-40.
