--- a/locale/no/mod-locales-settings-1.cfg
+++ b/locale/no/mod-locales-settings-1.cfg
@@ -10,4 +10,5 @@ modular-armor-grid-size-h=Sett høyde for Modulær Rustnings rutenett. fra 1-9.
 modular-armor-grid-size-w=Sett bredde for Modulær Rustningens rutenett. fra 1-9.
 power-armor-grid-size-h=Sett høyde størrelse for Elektrisk Rustnings utstyrs nett. fra 5-19.
 power-armor-grid-size-w=Sett bredde for Elektrisk Rustnings rutenett. fra 5-19.
+power-armor-mk2-grid-size-h=Sett høyde for Elektrisk Rustning mk2 rutenett. fra 5-40.
 power-armor-mk2-grid-size-w=Sett bredde for Elektrisk Rustning mk2 rutenett. fra 5-40.
