--- a/locale/no/mod-locales-settings-1.cfg
+++ b/locale/no/mod-locales-settings-1.cfg
@@ -4,7 +4,7 @@ modular-armor-grid-size-w=Modulær Rustning bredde
 power-armor-grid-size-h=Elektrisk Rustning høyde
 power-armor-grid-size-w=Elektrisk Rustning bredde
 power-armor-mk2-grid-size-h=Elektrisk Rustning mk2 høyde
-power-armor-mk2-grid-size-w=Elektrisk Rustwning mk2 bredde
+power-armor-mk2-grid-size-w=Elektrisk Rustning mk2 bredde
 [mod-setting-description]
 modular-armor-grid-size-h=Sett høyde for Modulær Rustnings rutenett. fra 1-9.
 modular-armor-grid-size-w=Sett bredde for Modulær Rustningens rutenett. fra 1-9.
