locale EN progress

--- a/locale/en/mod-locale-settings-1.cfg
+++ b/locale/en/mod-locale-settings-1.cfg
@@ -1,14 +1,50 @@
 [mod-setting-name]
 modular-armor-grid-size-h=Modular Armour height
 modular-armor-grid-size-w=Modular Armour width
-power-armor-grid-size-h=Power Armour height
-power-armor-grid-size-w=Power Armour width
+power-armor-grid-size-h=Power Armour mk1 height
+power-armor-grid-size-w=Power Armour mk1 width
 power-armor-mk2-grid-size-h=Power Armour mk2 height
 power-armor-mk2-grid-size-w=Power Armour mk2 width
+mk3-destroyer-grid-size-h=Custom's Power Armour mk3 height
+mk3-destroyer-grid-size-w=Custom's Power Armour mk3
+mk4-exterminator-grid-size-h=Custom's Power Armour mk4 height
+mk4-exterminator-grid-size-w=Custom's Power Armour mk4
+mk5-annihilator-grid-size-h=Custom's Power Armour mk5 height
+mk5-annihilator-grid-size-w=Custom's Power Armour mk5
+bob-power-armor-mk3-grid-size-h=Bob's Power Armour mk3 height
+bob-power-armor-mk3-grid-size-w=Bob's Power Armour mk3
+bob-power-armor-mk4-grid-size-h=Bob's Power Armour mk4 height
+bob-power-armor-mk4-grid-size-w=Bob's Power Armour mk4
+bob-power-armor-mk5-grid-size-h=Bob's Power Armour mk5 height
+bob-power-armor-mk5-grid-size-w=Bob's Power Armour mk5
+pamk3-pmak3-grid-size-h= Power Armour mk3
+pamk3-pmak3-grid-size-w=Mk3's Power Armour mk3
+pamk3-pmak4-grid-size-h=Mk3's Power Armour mk4
+pamk3-pmak4-grid-size-w=Mk3's Power Armour mk4
+power-armor-mk3-armor-rampant-arsenal-grid-size-h=Arsenal's Power Armour mk3
+power-armor-mk3-armor-rampant-arsenal-grid-size-w=Arsenal's Power Armour mk3
 [mod-setting-description]
-modular-armor-grid-size-h=Set height for modular Armour grid from 1-10
-modular-armor-grid-size-w=Set width for modular Armour grid from 1-10
-power-armor-grid-size-h=Set height for Power Armour from 5-20.
-power-armor-grid-size-w=Set width for Power Armour from 5-20.
-power-armor-mk2-grid-size-h=Set height for Power Armour mk2 from 5-40.
-power-armor-mk2-grid-size-w=Set width for Power Armour mk2 from 5-40.
+modular-armor-grid-size-h=Set height. for modular Armour mk1 grid from 1-10. Deafualt are 5x5. mod defauls 5x5
+modular-armor-grid-size-w=Set width. for modular Armour mk1 grid from 1-10. Deafualt are 5x5. mod defauls 5x5
+power-armor-grid-size-h=Set height. for Power Armour from 5-20. Deafualt are 7x7. mod defauls 10x10.
+power-armor-grid-size-w=Set width. for Power Armour from 5-20. Deafualt are 7x7. mod defauls 10x10.
+power-armor-mk2-grid-size-h=Set height. for Power Armour mk2 from 5-40. Deafualt are 10x10. mod defauls 20x20.
+power-armor-mk2-grid-size-w=Set width. for Power Armour mk2 from 5-40. Deafualt are 10x10. mod defauls 20x20.
+mk3-destroyer-grid-size-h=Set height. Deafualt
+mk3-destroyer-grid-size-w=Set width. Deafualt
+mk4-exterminator-grid-size-h=Set height. Deafualt
+mk4-exterminator-grid-size-w=Set width. Deafualt
+mk5-annihilator-grid-size-h=Set height. Deafualt
+mk5-annihilator-grid-size-w=Set width. Deafualt
+bob-power-armor-mk3-grid-size-h=Set height. Deafualt
+bob-power-armor-mk3-grid-size-w=Set width. Deafualt
+bob-power-armor-mk4-grid-size-h=Set height. Deafualt
+bob-power-armor-mk4-grid-size-w=Set width. Deafualt
+bob-power-armor-mk5-grid-size-h=Set height. Deafualt
+bob-power-armor-mk5-grid-size-w=Set width. Deafualt
+pamk3-pmak3-grid-size-h=Set height for Power Armour mk3. Deafualt
+pamk3-pmak3-grid-size-w=Set width for Power Armour mk3. Deafualt
+pamk3-pmak4-grid-size-h=Set height for Power Armour mk4. Deafualt
+pamk3-pmak4-grid-size-w=Set width forPower Armour mk4. Deafualt
+power-armor-mk3-armor-rampant-arsenal-grid-size-h=Set height for Mk3's Power Armour mk4. Deafualt 
+power-armor-mk3-armor-rampant-arsenal-grid-size-w=Set width for Mk3's Power Armour mk4. Deafualt
