--- a/locale/en/mod-locale-settings-1.cfg
+++ b/locale/en/mod-locale-settings-1.cfg
@@ -1,50 +1,91 @@
 [mod-setting-name]
 modular-armor-grid-size-h=Modular Armour height
 modular-armor-grid-size-w=Modular Armour width
-power-armor-grid-size-h=Power Armour mk1 height
-power-armor-grid-size-w=Power Armour mk1 width
-power-armor-mk2-grid-size-h=Power Armour mk2 height
-power-armor-mk2-grid-size-w=Power Armour mk2 width
-mk3-destroyer-grid-size-h=Custom's Power Armour mk3 height
-mk3-destroyer-grid-size-w=Custom's Power Armour mk3
-mk4-exterminator-grid-size-h=Custom's Power Armour mk4 height
-mk4-exterminator-grid-size-w=Custom's Power Armour mk4
-mk5-annihilator-grid-size-h=Custom's Power Armour mk5 height
-mk5-annihilator-grid-size-w=Custom's Power Armour mk5
-bob-power-armor-mk3-grid-size-h=Bob's Power Armour mk3 height
-bob-power-armor-mk3-grid-size-w=Bob's Power Armour mk3
-bob-power-armor-mk4-grid-size-h=Bob's Power Armour mk4 height
-bob-power-armor-mk4-grid-size-w=Bob's Power Armour mk4
-bob-power-armor-mk5-grid-size-h=Bob's Power Armour mk5 height
-bob-power-armor-mk5-grid-size-w=Bob's Power Armour mk5
-pamk3-pmak3-grid-size-h= Power Armour mk3
-pamk3-pmak3-grid-size-w=Mk3's Power Armour mk3
-pamk3-pmak4-grid-size-h=Mk3's Power Armour mk4
-pamk3-pmak4-grid-size-w=Mk3's Power Armour mk4
-power-armor-mk3-armor-rampant-arsenal-grid-size-h=Arsenal's Power Armour mk3
-power-armor-mk3-armor-rampant-arsenal-grid-size-w=Arsenal's Power Armour mk3
+power-armor-grid-size-h=Power Armour MK1 height
+power-armor-grid-size-w=Power Armour MK1 width
+power-armor-mk2-grid-size-h=Power Armour MK2 height
+power-armor-mk2-grid-size-w=Power Armour MK2 width
+mk3-destroyer-grid-size-h=Custom's Power Armour MK3 height
+mk3-destroyer-grid-size-w=Custom's Power Armour MK3 width
+mk4-exterminator-grid-size-h=Custom's Power Armour MK4 height
+mk4-exterminator-grid-size-w=Custom's Power Armour MK4 width
+mk5-annihilator-grid-size-h=Custom's Power Armour MK5 height
+mk5-annihilator-grid-size-w=Custom's Power Armour MK5 width
+bob-power-armor-mk3-grid-size-h=Bob's Power Armour MK3 height
+bob-power-armor-mk3-grid-size-w=Bob's Power Armour MK3 width
+bob-power-armor-mk4-grid-size-h=Bob's Power Armour MK4 height
+bob-power-armor-mk4-grid-size-w=Bob's Power Armour MK4 width
+bob-power-armor-mk5-grid-size-h=Bob's Power Armour MK5 height
+bob-power-armor-mk5-grid-size-w=Bob's Power Armour MK5 width
+pamk3-pmak3-grid-size-h=Mk3's Power Armour MK3 height
+pamk3-pmak3-grid-size-w=Mk3's Power Armour MK3 width
+pamk3-pmak4-grid-size-h=Mk3's Power Armour MK4 height
+pamk3-pmak4-grid-size-w=Mk3's Power Armour MK4 width
+power-armor-mk3-armor-rampant-arsenal-grid-size-h=Arsenal's Power Armour MK3 height
+power-armor-mk3-armor-rampant-arsenal-grid-size-w=Arsenal's Power Armour MK3 width
+mk3-armor-grid-size-h=K2's Power Armour MK3 height
+mk3-armor-grid-size-w=K2's Power Armour MK3 width 
+mk4-armor-grid-size-h=K2's Power Armour MK4 height
+mk4-armor-grid-size-w=K2's Power Armour MK4 width
+se-thruster-suit-grid-size-h="SE's" Space Suit 1 height
+se-thruster-suit-grid-size-w="SE's" Space Suit 1 width
+se-thruster-suit-2grid-size-h="SE's" Space Suit 2 height
+se-thruster-suit-2grid-size-w="SE's" Space Suit 2 width
+se-thruster-suit-3-grid-size-h="SE's" Space Suit 3 height
+se-thruster-suit-3-grid-size-w="SE's" Space Suit 3 width
+se-thruster-suit-4-grid-size-h="SE's" Space Suit 4 height
+se-thruster-suit-4-grid-size-w="SE's" Space Suit 4 width
 [mod-setting-description]
-modular-armor-grid-size-h=Set height. for modular Armour mk1 grid from 1-10. Deafualt are 5x5. mod defauls 5x5
-modular-armor-grid-size-w=Set width. for modular Armour mk1 grid from 1-10. Deafualt are 5x5. mod defauls 5x5
-power-armor-grid-size-h=Set height. for Power Armour from 5-20. Deafualt are 7x7. mod defauls 10x10.
-power-armor-grid-size-w=Set width. for Power Armour from 5-20. Deafualt are 7x7. mod defauls 10x10.
-power-armor-mk2-grid-size-h=Set height. for Power Armour mk2 from 5-40. Deafualt are 10x10. mod defauls 20x20.
-power-armor-mk2-grid-size-w=Set width. for Power Armour mk2 from 5-40. Deafualt are 10x10. mod defauls 20x20.
-mk3-destroyer-grid-size-h=Set height. Deafualt
-mk3-destroyer-grid-size-w=Set width. Deafualt
-mk4-exterminator-grid-size-h=Set height. Deafualt
-mk4-exterminator-grid-size-w=Set width. Deafualt
-mk5-annihilator-grid-size-h=Set height. Deafualt
-mk5-annihilator-grid-size-w=Set width. Deafualt
-bob-power-armor-mk3-grid-size-h=Set height. Deafualt
-bob-power-armor-mk3-grid-size-w=Set width. Deafualt
-bob-power-armor-mk4-grid-size-h=Set height. Deafualt
-bob-power-armor-mk4-grid-size-w=Set width. Deafualt
-bob-power-armor-mk5-grid-size-h=Set height. Deafualt
-bob-power-armor-mk5-grid-size-w=Set width. Deafualt
-pamk3-pmak3-grid-size-h=Set height for Power Armour mk3. Deafualt
-pamk3-pmak3-grid-size-w=Set width for Power Armour mk3. Deafualt
-pamk3-pmak4-grid-size-h=Set height for Power Armour mk4. Deafualt
-pamk3-pmak4-grid-size-w=Set width forPower Armour mk4. Deafualt
-power-armor-mk3-armor-rampant-arsenal-grid-size-h=Set height for Mk3's Power Armour mk4. Deafualt 
-power-armor-mk3-armor-rampant-arsenal-grid-size-w=Set width for Mk3's Power Armour mk4. Deafualt
+modular-armor-grid-size-h=Set height for Modular Armour grid from 1-10. Deafualt value 5. Mod default 5.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+modular-armor-grid-size-w=Set width for Modular Armour grid from 1-10. Deafualt value 5. Mod default 5.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+power-armor-grid-size-h=Set height for Power Armour MK1 from 5-20. Deafualt value 7. Mod default 10.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+power-armor-grid-size-w=Set width for Power Armour MK1 from 5-20. Deafualt value 7. Mod default 10.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+power-armor-mk2-grid-size-h=Set height for Power Armour MK2 from 5-40. Deafualt value 10. Mod default 20.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+power-armor-mk2-grid-size-w=Set width for Power Armour MK2 from 5-40. Deafualt value 10. Mod default 20.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+mk3-destroyer-grid-size-h=Set height for "Custom's" Power Armour MK3 from 5-40.Deafualt value 12. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+mk3-destroyer-grid-size-w=Set width for "Custom's" Power Armour MK3 from 5-40. Deafualt value 12. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+mk4-exterminator-grid-size-h=Set height for Custom's" Power Armour MK4 from 5-50. Deafualt value 14. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+mk4-exterminator-grid-size-w=Set width for "Custom's" Power Armour MK4 from 5-50. Deafualt value 14. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+mk5-annihilator-grid-size-h=Set height for "Custom's" Power Armour MK5 from 5-400. Deafualt value 16. Mod default 50.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+mk5-annihilator-grid-size-w=Set width for "Custom's" Power Armour MK5 from 5-400. Deafualt value 16. Mod default 50.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+bob-power-armor-mk3-grid-size-h=Set height for "Bob's" Power Armour MK3 from 5-45. Deafualt value 12. Mod default 35.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+bob-power-armor-mk3-grid-size-w=Set width for "Bob's" Power Armour MK3 from 5-45. Deafualt value 12. Mod default 35.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+bob-power-armor-mk4-grid-size-h=Set height for "Bob's" Power Armour MK4 from 5-55. Deafualt value 14. Mod default 45.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing size on exsing save.[/color]
+bob-power-armor-mk4-grid-size-w=Set width for "Bob's" Power Armour MK4 from 5-55. Deafualt value 14. Mod default 45.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+bob-power-armor-mk5-grid-size-h=Set height for "Bob's" Power Armour MK5 from 5-550. Deafualt value 16. Mod default 55.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+bob-power-armor-mk5-grid-size-w=Set width for "Bob's" Power Armour MK5 from 5-550. Deafualt value 16. Mod default 55.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+pamk3-pmak3-grid-size-h=Set height for "MK3's" Power Armour MK3 from 5-30. Deafualt 14. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+pamk3-pmak3-grid-size-w=Set width for "MK3's" Power Armour MK3 from 5-30. Deafualt value 14. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+pamk3-pmak4-grid-size-h=Set height for "MK3's" Power Armour MK4 from 5-50. Deafualt value 20. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+pamk3-pmak4-grid-size-w=Set width for "MK3's" Power Armour MK4 from 5-50. Deafualt value 20. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+power-armor-mk3-armor-rampant-arsenal-grid-size-h=Set height for "Arsenal's" Power Armour Mk3 from 5-60. Deafualt value 12. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+power-armor-mk3-armor-rampant-arsenal-grid-size-w=Set width for "Arsenal's" Power Armour Mk3 from 5-60. Deafualt value 12. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+mk3-armor-grid-size-h=Set height for "K2's" Power Armour MK3 from 5-60. Deafualt value 10. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+mk3-armor-grid-size-w=Set width for "K2's" Power Armour MK3 from 5-60. Deafualt value 10. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+mk4-armor-grid-size-h=Set height for "K2's" Power Armour Mk4 form 5-500. Deafualt value 12. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsing save.[/color]
+mk4-armor-grid-size-w=Set width for "K2's" Power Armour MK4 from 5-500. Deafualt value 12. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+se-thruster-suit-grid-size-h=Set height for "SE's" Space Suit 1 form 5-30. Default value 6. Mod default 15.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+se-thruster-suit-grid-size-w=Set width for "SE's" Space Suit 1 form 5-30. Default value 6. Mod default 15.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+se-thruster-suit-2grid-size-h=Set height for "SE's" Space Suit 2 form 5-45. Default value 8. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+se-thruster-suit-2grid-size-w=Set width for "SE's" Space Suit 2 form 5-45. Default value 8. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+ 
+se-thruster-suit-3-grid-size-h=Set height for "SE's" Space Suit 3 form 5-60. Default value 10. Mod default 45.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+se-thruster-suit-3-grid-size-w=Set width for "SE's" Space Suit 3 form 5-60. Default value 10. Mod default 45.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+se-thruster-suit-4-grid-size-h=Set height for "SE's" Space Suit 4 form 5-500. Default value 12. Mod default 60.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+se-thruster-suit-4-grid-size-w=Set width for "SE's" Space Suit 4 form 5-500. Default value 12. Mod default 60.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
