--- a/locale/no/mod-locales-settings-1.cfg
+++ b/locale/no/mod-locales-settings-1.cfg
@@ -5,10 +5,87 @@ power-armor-grid-size-h=Elektrisk Rustning høyde
 power-armor-grid-size-w=Elektrisk Rustning bredde
 power-armor-mk2-grid-size-h=Elektrisk Rustning mk2 høyde
 power-armor-mk2-grid-size-w=Elektrisk Rustning mk2 bredde
+mk3-destroyer-grid-size-h=Custom's Power Armour MK3 height
+mk3-destroyer-grid-size-w=Custom's Power Armour MK3 width
+mk4-exterminator-grid-size-h=Custom's Power Armour MK4 height
+mk4-exterminator-grid-size-w=Custom's Power Armour MK4 width
+mk5-annihilator-grid-size-h=Custom's Power Armour MK5 height
+mk5-annihilator-grid-size-w=Custom's Power Armour MK5 width
+bob-power-armor-mk3-grid-size-h=Bob's Power Armour MK3 height
+bob-power-armor-mk3-grid-size-w=Bob's Power Armour MK3 width
+bob-power-armor-mk4-grid-size-h=Bob's Power Armour MK4 height
+bob-power-armor-mk4-grid-size-w=Bob's Power Armour MK4 width
+bob-power-armor-mk5-grid-size-h=Bob's Power Armour MK5 height
+bob-power-armor-mk5-grid-size-w=Bob's Power Armour MK5 width
+pamk3-pmak3-grid-size-h=Mk3's Power Armour MK3 height
+pamk3-pmak3-grid-size-w=Mk3's Power Armour MK3 width
+pamk3-pmak4-grid-size-h=Mk3's Power Armour MK4 height
+pamk3-pmak4-grid-size-w=Mk3's Power Armour MK4 width
+power-armor-mk3-armor-rampant-arsenal-grid-size-h=Arsenal's Power Armour MK3 height
+power-armor-mk3-armor-rampant-arsenal-grid-size-w=Arsenal's Power Armour MK3 width
+mk3-armor-grid-size-h=K2's Power Armour MK3 height
+mk3-armor-grid-size-w=K2's Power Armour MK3 width 
+mk4-armor-grid-size-h=K2's Power Armour MK4 height
+mk4-armor-grid-size-w=K2's Power Armour MK4 width
+se-thruster-suit-grid-size-h="SE's" Space Suit 1 height
+se-thruster-suit-grid-size-w="SE's" Space Suit 1 width
+se-thruster-suit-2grid-size-h="SE's" Space Suit 2 height
+se-thruster-suit-2grid-size-w="SE's" Space Suit 2 width
+se-thruster-suit-3-grid-size-h="SE's" Space Suit 3 height
+se-thruster-suit-3-grid-size-w="SE's" Space Suit 3 width
+se-thruster-suit-4-grid-size-h="SE's" Space Suit 4 height
+se-thruster-suit-4-grid-size-w="SE's" Space Suit 4 width
 [mod-setting-description]
 modular-armor-grid-size-h=Sett høyde for Modulær Rustnings rutenett. fra 1-10.
 modular-armor-grid-size-w=Sett bredde for Modulær Rustningens rutenett. fra 1-10.
+
 power-armor-grid-size-h=Sett høyde størrelse for Elektrisk Rustnings utstyrs nett. fra 5-20.
 power-armor-grid-size-w=Sett bredde for Elektrisk Rustnings rutenett. fra 5-20.
+
 power-armor-mk2-grid-size-h=Sett høyde for Elektrisk Rustning mk2 rutenett. fra 5-40.
 power-armor-mk2-grid-size-w=Sett bredde for Elektrisk Rustning mk2 rutenett. fra 5-40.
+
+mk3-destroyer-grid-size-h=Set height for "Custom's" Power Armour MK3 from 5-40.Deafualt value 12. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+mk3-destroyer-grid-size-w=Set width for "Custom's" Power Armour MK3 from 5-40. Deafualt value 12. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+mk4-exterminator-grid-size-h=Set height for Custom's" Power Armour MK4 from 5-50. Deafualt value 14. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+mk4-exterminator-grid-size-w=Set width for "Custom's" Power Armour MK4 from 5-50. Deafualt value 14. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+mk5-annihilator-grid-size-h=Set height for "Custom's" Power Armour MK5 from 5-400. Deafualt value 16. Mod default 50.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+mk5-annihilator-grid-size-w=Set width for "Custom's" Power Armour MK5 from 5-400. Deafualt value 16. Mod default 50.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+bob-power-armor-mk3-grid-size-h=Set height for "Bob's" Power Armour MK3 from 5-45. Deafualt value 12. Mod default 35.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+bob-power-armor-mk3-grid-size-w=Set width for "Bob's" Power Armour MK3 from 5-45. Deafualt value 12. Mod default 35.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+bob-power-armor-mk4-grid-size-h=Set height for "Bob's" Power Armour MK4 from 5-55. Deafualt value 14. Mod default 45.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing size on exsing save.[/color]
+bob-power-armor-mk4-grid-size-w=Set width for "Bob's" Power Armour MK4 from 5-55. Deafualt value 14. Mod default 45.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+bob-power-armor-mk5-grid-size-h=Set height for "Bob's" Power Armour MK5 from 5-550. Deafualt value 16. Mod default 55.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+bob-power-armor-mk5-grid-size-w=Set width for "Bob's" Power Armour MK5 from 5-550. Deafualt value 16. Mod default 55.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+pamk3-pmak3-grid-size-h=Set height for "MK3's" Power Armour MK3 from 5-30. Deafualt 14. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+pamk3-pmak3-grid-size-w=Set width for "MK3's" Power Armour MK3 from 5-30. Deafualt value 14. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+pamk3-pmak4-grid-size-h=Set height for "MK3's" Power Armour MK4 from 5-50. Deafualt value 20. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+pamk3-pmak4-grid-size-w=Set width for "MK3's" Power Armour MK4 from 5-50. Deafualt value 20. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+power-armor-mk3-armor-rampant-arsenal-grid-size-h=Set height for "Arsenal's" Power Armour Mk3 from 5-60. Deafualt value 12. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+power-armor-mk3-armor-rampant-arsenal-grid-size-w=Set width for "Arsenal's" Power Armour Mk3 from 5-60. Deafualt value 12. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+mk3-armor-grid-size-h=Set height for "K2's" Power Armour MK3 from 5-60. Deafualt value 10. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+mk3-armor-grid-size-w=Set width for "K2's" Power Armour MK3 from 5-60. Deafualt value 10. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+mk4-armor-grid-size-h=Set height for "K2's" Power Armour Mk4 form 5-500. Deafualt value 12. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsing save.[/color]
+mk4-armor-grid-size-w=Set width for "K2's" Power Armour MK4 from 5-500. Deafualt value 12. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+se-thruster-suit-grid-size-h=Set height for "SE's" Space Suit 1 form 5-30. Default value 6. Mod default 15.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+se-thruster-suit-grid-size-w=Set width for "SE's" Space Suit 1 form 5-30. Default value 6. Mod default 15.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+se-thruster-suit-2grid-size-h=Set height for "SE's" Space Suit 2 form 5-45. Default value 8. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+se-thruster-suit-2grid-size-w=Set width for "SE's" Space Suit 2 form 5-45. Default value 8. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+ 
+se-thruster-suit-3-grid-size-h=Set height for "SE's" Space Suit 3 form 5-60. Default value 10. Mod default 45.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+se-thruster-suit-3-grid-size-w=Set width for "SE's" Space Suit 3 form 5-60. Default value 10. Mod default 45.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+
+se-thruster-suit-4-grid-size-h=Set height for "SE's" Space Suit 4 form 5-500. Default value 12. Mod default 60.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+se-thruster-suit-4-grid-size-w=Set width for "SE's" Space Suit 4 form 5-500. Default value 12. Mod default 60.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
