fixed my mess-up

--- a/locale/en/mod-locale-settings-1.cfg
+++ b/locale/en/mod-locale-settings-1.cfg
@@ -72,11 +72,11 @@ pamk3-pmak4-grid-size-w=Set width for "MK3's" Power Armour MK4 from 0-50. Deafua
 power-armor-mk3-armor-rampant-arsenal-grid-size-h=Set height for "Arsenal's" Power Armour Mk3 from 0-60. Deafualt value 12. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
 power-armor-mk3-armor-rampant-arsenal-grid-size-w=Set width for "Arsenal's" Power Armour Mk3 from 0-60. Deafualt value 12. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
 
-mk3-armor-grid-size-h=Set height for "K2's" Power Armour MK3 from 0-60. Deafualt value 10. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
-mk3-armor-grid-size-w=Set width for "K2's" Power Armour MK3 from 0-60. Deafualt value 10. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+mk3-armor-size-h=Set height for "K2's" Power Armour MK3 from 0-60. Deafualt value 10. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+mk3-armor-size-w=Set width for "K2's" Power Armour MK3 from 0-60. Deafualt value 10. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
 
-mk4-armor-grid-size-h=Set height for "K2's" Power Armour Mk4 form 0-500. Deafualt value 12. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsing save.[/color]
-mk4-armor-grid-size-w=Set width for "K2's" Power Armour MK4 from 0-500. Deafualt value 12. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+mk4-armor-size-h=Set height for "K2's" Power Armour Mk4 form 0-500. Deafualt value 12. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsing save.[/color]
+mk4-armor-size-w=Set width for "K2's" Power Armour MK4 from 0-500. Deafualt value 12. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
 
 se-thruster-suit-grid-size-h=Set height for "SE's" Space Suit 1 form 0-30. Default value 6. Mod default 15.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
 se-thruster-suit-grid-size-w=Set width for "SE's" Space Suit 1 form 0-30. Default value 6. Mod default 15.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
