--- a/locale/en/mod-locale-settings-1.cfg
+++ b/locale/en/mod-locale-settings-1.cfg
@@ -36,56 +36,56 @@ se-thruster-suit-3-grid-size-w="SE's" Space Suit 3 width
 se-thruster-suit-4-grid-size-h="SE's" Space Suit 4 height
 se-thruster-suit-4-grid-size-w="SE's" Space Suit 4 width
 [mod-setting-description]
-modular-armor-grid-size-h=Set height for Modular Armour grid from 0-10. Deafualt value 5. Mod default 5.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
-modular-armor-grid-size-w=Set width for Modular Armour grid from 0-10. Deafualt value 5. Mod default 5.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+modular-armor-grid-size-h=Modular Armour Height\nMin:0\nMax:10\nBase Default:5\nMod Default:5\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+modular-armor-grid-size-w=Modular Armour Width\nMin:0\nMax:10\nBase Default:5\nMod Default:5\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-power-armor-grid-size-h=Set height for Power Armour MK1 from 0-20. Deafualt value 7. Mod default 10.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
-power-armor-grid-size-w=Set width for Power Armour MK1 from 0-20. Deafualt value 7. Mod default 10.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+power-armor-grid-size-h=Power Armour MK1 Height\nMin:0\nMax:20\nBase Default:7\nMod Default:10\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+power-armor-grid-size-w=Power Armour MK1 Width\nMin:0\nMax:20\nBase Default:7\nMod Default:10\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-power-armor-mk2-grid-size-h=Set height for Power Armour MK2 from 0-40. Deafualt value 10. Mod default 20.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
-power-armor-mk2-grid-size-w=Set width for Power Armour MK2 from 0-40. Deafualt value 10. Mod default 20.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+power-armor-mk2-grid-size-h=Power Armour MK2 Height\nMin:0\nMax:40\nBase Default:10\nMod Default:20\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+power-armor-mk2-grid-size-w=Power Armour MK2 Width\nMin:0\nMax:40\nBase Default:10\nMod Default:20\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-mk3-destroyer-grid-size-h=Set height for "Custom's" Power Armour MK3 from 0-40.Deafualt value 12. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
-mk3-destroyer-grid-size-w=Set width for "Custom's" Power Armour MK3 from 0-40. Deafualt value 12. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+mk3-destroyer-grid-size-h="Custom's" Power Armour MK3 Height\nMin:0\nMax:40\nBase_Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+mk3-destroyer-grid-size-w="Custom's" Power Armour MK3 Width\nMin:0\nMax:40\nBase_Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-mk4-exterminator-grid-size-h=Set height for Custom's" Power Armour MK4 from 0-50. Deafualt value 14. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
-mk4-exterminator-grid-size-w=Set width for "Custom's" Power Armour MK4 from 0-50. Deafualt value 14. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+mk4-exterminator-grid-size-h="Custom's" Power Armour MK4 Height\nMin:0\nMax:50\nBase Default:14\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+mk4-exterminator-grid-size-w="Custom's" Power Armour MK4 Width\nMin:0\nMax:50\nBase Default:14\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-mk5-annihilator-grid-size-h=Set height for "Custom's" Power Armour MK5 from 0-400. Deafualt value 16. Mod default 50.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
-mk5-annihilator-grid-size-w=Set width for "Custom's" Power Armour MK5 from 0-400. Deafualt value 16. Mod default 50.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+mk5-annihilator-grid-size-h="Custom's" Power Armour MK5 Height\nMin:0\nMax:400\nDefault:16\nMod Default:50\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+mk5-annihilator-grid-size-w="Custom's" Power Armour MK5 Width\nMin:0\nMax:400\nDefault:16\nMod Default:50\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-bob-power-armor-mk3-grid-size-h=Set height for "Bob's" Power Armour MK3 from 0-45. Deafualt value 12. Mod default 35.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
-bob-power-armor-mk3-grid-size-w=Set width for "Bob's" Power Armour MK3 from 0-45. Deafualt value 12. Mod default 35.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+bob-power-armor-mk3-grid-size-h="Bob's" Power Armour MK3 Height\nMin:0\nMax:45\nBase Default:12\nMod Default:35\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+bob-power-armor-mk3-grid-size-w="Bob's" Power Armour MK3 Width\nMin:0\nMax:45\nBase Default:12\nMod Default:35\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-bob-power-armor-mk4-grid-size-h=Set height for "Bob's" Power Armour MK4 from 0-55. Deafualt value 14. Mod default 45.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing size on exsing save.[/color]
-bob-power-armor-mk4-grid-size-w=Set width for "Bob's" Power Armour MK4 from 0-55. Deafualt value 14. Mod default 45.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+bob-power-armor-mk4-grid-size-h="Bob's" Power Armour MK4 Height\nMin:0\nMax:55\nDefault:14\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing size on exsisting save.[/color]
+bob-power-armor-mk4-grid-size-w="Bob's" Power Armour MK4 Width\nMin:0\nMax:55\nDefault:14\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-bob-power-armor-mk5-grid-size-h=Set height for "Bob's" Power Armour MK5 from 0-550. Deafualt value 16. Mod default 55.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
-bob-power-armor-mk5-grid-size-w=Set width for "Bob's" Power Armour MK5 from 0-550. Deafualt value 16. Mod default 55.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+bob-power-armor-mk5-grid-size-h="Bob's" Power Armour MK5 Height\nMin:0\nMax:550\nDefault:16\nMod Default:55\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+bob-power-armor-mk5-grid-size-w="Bob's" Power Armour MK5 Width\nMin:0\nMax:550\nDefault:16\nMod Default:55\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-pamk3-pmak3-grid-size-h=Set height for "MK3's" Power Armour MK3 from 0-30. Deafualt 14. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
-pamk3-pmak3-grid-size-w=Set width for "MK3's" Power Armour MK3 from 0-30. Deafualt value 14. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+pamk3-pmak3-grid-size-h="MK3's" Power Armour MK3 Height\nMin:0\nMax:30\nDefualt:14\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+pamk3-pmak3-grid-size-w="MK3's" Power Armour MK3 Width\nMin:0\nMax:30\nDefualt:14\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-pamk3-pmak4-grid-size-h=Set height for "MK3's" Power Armour MK4 from 0-50. Deafualt value 20. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
-pamk3-pmak4-grid-size-w=Set width for "MK3's" Power Armour MK4 from 0-50. Deafualt value 20. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+pamk3-pmak4-grid-size-h="MK3's" Power Armour MK4 Height\nMin:0\nMax:50\nDefault:20\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+pamk3-pmak4-grid-size-w="MK3's" Power Armour MK4 Width\nMin:0\nMax:50\nDefault:20\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-power-armor-mk3-armor-rampant-arsenal-grid-size-h=Set height for "Arsenal's" Power Armour Mk3 from 0-60. Deafualt value 12. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
-power-armor-mk3-armor-rampant-arsenal-grid-size-w=Set width for "Arsenal's" Power Armour Mk3 from 0-60. Deafualt value 12. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Power Armour Mk3 Height\nMin:0\nMax:60\nDefault:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Power Armour Mk3 Width\nMin:0\nMax:60\nDefault:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-mk3-armor-size-h=Set height for "K2's" Power Armour MK3 from 0-60. Deafualt value 10. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
-mk3-armor-size-w=Set width for "K2's" Power Armour MK3 from 0-60. Deafualt value 10. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+mk3-armor-size-h="K2's" Power Armour MK3 Height\nMin:0\nMax:60\nDefault:10\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+mk3-armor-size-w="K2's" Power Armour MK3 Width\nMin:0\nMax:60\nDefault:10\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-mk4-armor-size-h=Set height for "K2's" Power Armour Mk4 form 0-500. Deafualt value 12. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsing save.[/color]
-mk4-armor-size-w=Set width for "K2's" Power Armour MK4 from 0-500. Deafualt value 12. Mod default 40.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+mk4-armor-size-h="K2's" Power Armour Mk4 Height\nMin:0\nMax:500\nDefault:12\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+mk4-armor-size-w="K2's" Power Armour MK4 Width\nMin:0\nMax:500\nDefault:12\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-se-thruster-suit-grid-size-h=Set height for "SE's" Space Suit 1 form 0-30. Default value 6. Mod default 15.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
-se-thruster-suit-grid-size-w=Set width for "SE's" Space Suit 1 form 0-30. Default value 6. Mod default 15.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+se-thruster-suit-grid-size-h="SE's" Space Suit 1 Height\nMin:0\nMax:30\nDefault:6\nMod Default:15\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+se-thruster-suit-grid-size-w="SE's" Space Suit 1 Width\nMin:0\nMax:30\nDefault:6\nMod Default:15\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-se-thruster-suit-2-grid-size-h=Set height for "SE's" Space Suit 2 form 0-45. Default value 8. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
-se-thruster-suit-2-grid-size-w=Set width for "SE's" Space Suit 2 form 0-45. Default value 8. Mod default 30.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+se-thruster-suit-2-grid-size-h="SE's" Space Suit 2 Height\nMin:0\nMax:45\nDefault:8\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+se-thruster-suit-2-grid-size-w="SE's" Space Suit 2 Width\nMin:0\nMax:45\nDefault:8\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
  
-se-thruster-suit-3-grid-size-h=Set height for "SE's" Space Suit 3 form 0-60. Default value 10. Mod default 45.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
-se-thruster-suit-3-grid-size-w=Set width for "SE's" Space Suit 3 form 0-60. Default value 10. Mod default 45.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+se-thruster-suit-3-grid-size-h="SE's" Space Suit 3 Height\nMin:0\nMax:60\nDefault:10\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+se-thruster-suit-3-grid-size-w="SE's" Space Suit 3 Width\nMin:0\nMax:60\nDefault:10\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-se-thruster-suit-4-grid-size-h=Set height for "SE's" Space Suit 4 form 0-500. Default value 12. Mod default 60.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
-se-thruster-suit-4-grid-size-w=Set width for "SE's" Space Suit 4 form 0-500. Default value 12. Mod default 60.[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+se-thruster-suit-4-grid-size-h="SE's" Space Suit 4 Height\nMin:0\nMax:500\nDefault:12\nMod Default:60\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+se-thruster-suit-4-grid-size-w="SE's" Space Suit 4 Width\nMin:0\nMax:500\nDefault:12\nMod Default:60\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
