--- a/locale/en/mod-locale-settings-1.cfg
+++ b/locale/en/mod-locale-settings-1.cfg
@@ -72,11 +72,11 @@ pamk3-pmak4-grid-size-w="MK3's" Power Armour MK4 Width\nMin:0\nMax:50\nDefault:2
 power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Power Armour Mk3 Height\nMin:0\nMax:60\nDefault:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Power Armour Mk3 Width\nMin:0\nMax:60\nDefault:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-mk3-armor-size-h="K2's" Power Armour MK3 Height\nMin:0\nMax:60\nDefault:10\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-mk3-armor-size-w="K2's" Power Armour MK3 Width\nMin:0\nMax:60\nDefault:10\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+mk3-armor-grid-size-h="K2's" Power Armour MK3 Height\nMin:0\nMax:60\nDefault:10\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+mk3-armor-grid-size-w="K2's" Power Armour MK3 Width\nMin:0\nMax:60\nDefault:10\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-mk4-armor-size-h="K2's" Power Armour Mk4 Height\nMin:0\nMax:500\nDefault:12\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
-mk4-armor-size-w="K2's" Power Armour MK4 Width\nMin:0\nMax:500\nDefault:12\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+mk4-armor-grid-size-h="K2's" Power Armour Mk4 Height\nMin:0\nMax:500\nDefault:12\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+mk4-armor-grid-size-w="K2's" Power Armour MK4 Width\nMin:0\nMax:500\nDefault:12\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 se-thruster-suit-grid-size-h="SE's" Space Suit 1 Height\nMin:0\nMax:30\nDefault:6\nMod Default:15\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 se-thruster-suit-grid-size-w="SE's" Space Suit 1 Width\nMin:0\nMax:30\nDefault:6\nMod Default:15\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
